Implement Change,Forgot and Reset Password Feature

--- a/client/src/components/layout/Header/header.css
+++ b/client/src/components/layout/Header/header.css
@@ -201,7 +201,7 @@ nav {
     }
 
     .speedDial {
-        position: fixed;
+        position: absolute;
         right: 3vmax;
         top: 2.5vmax;
     }
