Implement Add to Cart And Check Out Feature

--- a/client/src/components/layout/Header/header.css
+++ b/client/src/components/layout/Header/header.css
@@ -106,7 +106,7 @@ nav {
 .menu-list li a.active {
     /* background-color:pink; */
     border-radius: 20px;
-    color: green;
+    color: tomato;
     transition: all 0.1s ease-in-out;
 }
 
