--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -90,7 +90,7 @@
     align-items: center;
 }
 
-.productCard>div>span {
+.productCardSpan {
     margin: 0.5vmax;
     font: 300 0.7vmax "Roboto";
 }
